--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
     <title>Documento de estudio de javaScript</title>
 </head>
 <body>
+    <h1>Estudio de javaScript</h1>
+    <p>Este es un documento de estudio de javaScript</p>
+    <script src="main.js"></script>
+    <script src="main2.js"></script>
     
 </body>
 </html>
