aniado el boton jesu

--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 <body>
     <h1>Estudio de javaScript</h1>
     <p>Este es un documento de estudio de javaScript</p>
-    <script src="main.js"><a>JESUS</a></script>
-    <script src="main2.js"></script>
+    <a href="#" class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true">JESUS</a>
     
 </body>
 </html>
