--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Estudio de javaScript</h1>
     <p>Este es un documento de estudio de javaScript</p>
-    <a href="#" class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true">JESUS</a>
+    <a href="jesu.html" class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true">JESUS</a>
     
 </body>
 </html>
