agregue boton damian

--- a/main.html
+++ b/main.html
@@ -9,15 +9,27 @@
     <h1>Estudio de javaScript</h1>
     <p>Este es un documento de estudio de javaScript</p>
    
-    <table>
-        <tr>
-            <td>DAMIAN</td>
-        </tr>
-        <tr>
-            <td>JESUS</td>
-        </tr>
-    </table>
-       
+    crea un boton que se llame damian
+    <button>Damian</button>
+    <style>
+        button {
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 12px;
+        }
+    </style>
       
 </body>
 </html>
