--- a/main.html
+++ b/main.html
@@ -6,30 +6,17 @@
     <title>Documento de estudio de javaScript</title>
 </head>
 <body>
+    <center>>
     <h1>Estudio de javaScript</h1>
     <p>Este es un documento de estudio de javaScript</p>
    
-    crea un boton que se llame damian
-    <button>Damian</button>
-    <style>
-        button {
-            position: absolute;
-            left: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: #4CAF50; /* Green */
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 12px;
-        }
-    </style>
-      
+    <br>
+
+    <div style="display: flex; justify-content: space-between; width: 100%; padding: 0 20px;"></div>
+        <button style="background-color: #4CAF50; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"><a href=""></a>Damian</button>
+        <button style="background-color: #4CAF50; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 0 10px 200px; cursor: pointer; border-radius: 12px;"><i><a href="jesu.html" target="_blank"></a></i>JESUS</button>
+    </div>
+    </center>
+    </div>
 </body>
 </html>
