cambio de colores

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 
     <div style="display: flex; justify-content: space-between; width: 100%; padding: 0 20px;"></div>
         <button style="background-color: #4CAF50; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"><a href=""></a>Damian</button>
-        <button style="background-color: #4CAF50; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 0 10px 200px; cursor: pointer; border-radius: 12px;"><i><a href="jesu.html" target="_blank"></a></i>JESUS</button>
+        <button style="background-color: #dd18bc; border: none; color: rgb(139, 130, 130); padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 0 10px 200px; cursor: pointer; border-radius: 12px;"><i><a href="jesu.html" target="_blank"></a></i>JESUS</button>
     </div>
     </center>
     </div>
