--- a/main.html
+++ b/main.html
@@ -7,22 +7,22 @@
     <title>Documento de estudio de javaScript</title>
     <script src="main2.js"></script>
 </head>
+
 <body>
     <center>>
-    <h1>Estudio de javaScript</h1>
-    <p>Este es un documento de estudio de javaScript</p>
-   
-    <br>
+        <h1>Estudio de javaScript</h1>
+        <p>Este es un documento de estudio de javaScript</p>
 
-    <div style="display: flex; justify-content: space-between; width: 100%; padding: 0 20px;"></div>
-<<<<<<< HEAD
-        <button style="background-color:aquamarine; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"><a href=""></a>Damian</button>
-        <button style="background-color: #dd18bc; border: none; color: rgb(139, 130, 130); padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 0 10px 200px; cursor: pointer; border-radius: 12px;"><i><a href="jesu.html" target="_blank"></a></i>JESUS</button>
-    </div>
-=======
-        <button style="background-color: #4CAF50; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"><a href=""></a>Damian</button>
-        <a href="jesu.html" style= "background-color:darkseagreen; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;" type="button" target="_blank">JESUS</a>
->>>>>>> view-jesus
+        <br>
+        </div>
+        <button
+            style="background-color: #4CAF50; border: none; color: #ffffff; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"><a
+                href="damian.html" target="_blank" type="button"></a>Damian</button>
+
+        <a href="jesu.html"
+            style="background-color:darkseagreen; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"
+            type="button" target="_blank">JESUS</a>
+            
     </center>
     </div>
 </body>
