--- a/main.html
+++ b/main.html
@@ -19,8 +19,7 @@
             style="background-color: #4CAF50; border: none; color: #ffffff; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"><a
                 href="damian.html" target="_blank" type="button"></a>Damian</button>
 
-        <a href="jesu.html"
-            style="background-color:darkseagreen; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"
+        <a href="jesu.html" style="background-color:darkseagreen; border: none; color: white; padding: 15px 32px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 10px 200px 10px 0; cursor: pointer; border-radius: 12px;"
             type="button" target="_blank">JESUS</a>
             
     </center>
